Issue IMCMS-458: Fix z-index collision - Set z-index;

--- a/src/main/webapp/css/admin/imcms-admin_panel.css
+++ b/src/main/webapp/css/admin/imcms-admin_panel.css
@@ -7,7 +7,7 @@
     -moz-transition: all .3s;
     -o-transition: all .3s;
     transition: all .3s;
-    z-index: 1;
+    z-index: 100;
 }
 
 .imcms-admin-panel {
